--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -12,8 +12,7 @@
   min-height: 275px;
   margin-bottom: 32px;
 }
-
-.reviewr-slider-wrapper {
+.reviews-slider-wrapper {
   height: 242px;
   margin-bottom: 20px;
 }
@@ -40,30 +39,25 @@
   width: 200px;
   height: 122px;
 }
-.review-wrapper {
+.review {
   position: absolute;
   bottom: 0;
 
   width: 100%;
   min-height: 200px;
+  padding-top: 104px;
+  padding-left: 18px;
+  padding-right: 18px;
+  text-align: center;
+
+  line-height: 1.29;
+  letter-spacing: -0.02em;
 
   border: 1px solid var(--bg-circle-color);
   border-radius: 15px;
   box-shadow: 0px 9.04932px 26.5717px rgba(215, 228, 249, 0.25);
 
   background-color: var(--sec-text-color);
-}
-
-.review {
-  max-width: 299px;
-  min-height: 54px;
-  margin: 0 auto;
-  padding-top: 104px;
-  text-align: center;
-
-  line-height: 1.29;
-  letter-spacing: -0.02em;
-
   color: var(--pr-description-color);
 }
 
@@ -94,12 +88,13 @@
     min-height: 285px;
     margin-bottom: 50px;
   }
-  .reviewr-slider-wrapper {
+  .reviews-slider-wrapper {
     height: 240px;
     margin-bottom: 32px;
   }
   .review {
-    width: 312px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
   .reviews-btn {
     min-width: 222px;
@@ -113,6 +108,10 @@
 @media screen and (min-width: 1200px) {
   .reviews-section {
     padding-bottom: 128px;
+  }
+  .review {
+    padding-left: 24px;
+    padding-right: 24px;
   }
   .reviews-btn {
     transition: color var(--transition-dur-and-func),
